Update 'waqo8ambb-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:be830033e73671aedf2147d45ac4d99873c0e388@sha256:0a36cd7d0d680e67cb4815e7b668ef23b56f225ea2aeed466eb000506b32a581

--- a/components/waqo8ambb-go/overlays/development/deployment-patch.yaml
+++ b/components/waqo8ambb-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: waqo8ambb-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:be830033e73671aedf2147d45ac4d99873c0e388@sha256:0a36cd7d0d680e67cb4815e7b668ef23b56f225ea2aeed466eb000506b32a581
+          name: container-image
